--- a/Website/templates/niceTemplate.html
+++ b/Website/templates/niceTemplate.html
@@ -549,7 +549,8 @@
                                   <div onclick="buttonFormClicked()">{{ form.anim(class="smallFieldSize") }}</div>
                               </td>
                               <td>
-                                  <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Animation" data-content="Whether you want to generate a .mp4
+                                  <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Animation" data-content="
+                                  WARNING: video generation can be very slow! - Whether you want to generate a .mp4
                                   video plotting the data over a time period or the averaged plots over this a period.">
                                        <i class="fa fa-question-circle-o" aria-hidden="true"></i>
                                   </a>
