Adding deploiement instructions

--- a/Website/templates/niceTemplate.html
+++ b/Website/templates/niceTemplate.html
@@ -712,8 +712,8 @@
                               </td>
                               <td>
                                   <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Weighted data" data-content="The datation estimations are often bounded within two ages. If weighted is unchecked, an inscription
-                                  is counted as 100% present at every time within those bounds. If weighted is checked, the data is counted as 0% present on the bounds, 100% at the median age, and varies linearly between those values. Ex: an inscription whose datation is
-                                  estimated between years 50 and 62 will be 0% present at years 50 and 62, 100% at year 56, 25% at years 53 and 59, etc.">
+                                  is counted as 100% present at every time within those bounds. If weighted is checked, one observation whose datation is estimated between year A and year B will be considered
+                                  as (100/(B-A))%. For instance, an observation dated between 0 and 50AD is considered as 2% present on the whole period.">
                                        <i class="fa fa-question-circle-o" aria-hidden="true"></i>
                                   </a>
                               </td>
