--- a/Website/templates/niceTemplate.html
+++ b/Website/templates/niceTemplate.html
@@ -104,21 +104,37 @@
         var formEl = document.forms.formTest;
         var formData = new FormData(formEl);
 
-
-        if(formData.get('anim')=='y'){
-            $("#fps").show();
-            $("#imageOnly").hide();
-        }
-        else {
+        if(formData.get('noDates')=='y'){
+            $("#anim").hide();
+            $("#datasetApprox").hide();
+            $("#uAge").hide();
+            $("#lAge").hide();
             $("#fps").hide();
-            $("#imageOnly").show();
+            $("#weighted").hide();
         }
+        else{
+            $("#anim").show();
+            $("#datasetApprox").show();
+            $("#uAge").show();
+            $("#lAge").show();
+            $("#fps").show();
+            $("#weighted").show();
 
-        if(formData.get("plotClus")=='y'){
-            $("#radClus").show();
-        }
-        else {
-            $("#radClus").hide();
+            if(formData.get('anim')=='y'){
+                $("#fps").show();
+                $("#imageOnly").hide();
+            }
+            else {
+                $("#fps").hide();
+                $("#imageOnly").show();
+            }
+
+            if(formData.get("plotClus")=='y'){
+                $("#radClus").show();
+            }
+            else {
+                $("#radClus").hide();
+            }
         }
 
         if(formData.get("plotPoints")=='y'){
@@ -139,9 +155,9 @@
 
         if(formData.get("plotKde")=='y' || formData.get("plotHist2d")=='y'){
             $("#gridSize").show();
-            $("#fixedVmax").show();
+            $("#fixedvmax").show();
             $("#vmax").show();
-            if(formData.get('fixedVmax')=='y'){
+            if(formData.get('fixedvmax')=='y'){
                 $("#vmax").show();
             }
             else {
@@ -150,7 +166,7 @@
         }
         else {
             $("#gridSize").hide();
-            $("#fixedVmax").hide();
+            $("#fixedvmax").hide();
             $("#vmax").hide();
         }
 
@@ -536,25 +552,45 @@
                             <th colspan="3">
                                 Period
                             </th>
-                            <tr id='anim'>
-                              <td>
-                                  {{ form.anim.label }}
-                              </td>
-                              <td>
-                                  {% if form.anim.errors %}
-                                    {% for message in form.anim.errors %}
-                                      <div style="color:red">{{ message }}</div>
+                            <tr id='noDates'>
+                                <td>
+                                    {{ form.noDates.label }}
+                                </td>
+                                <td>
+                                    {% if form.noDates.errors %}
+                                    {% for message in form.noDates.errors %}
+                                    <div style="color:red">{{ message }}</div>
                                     {% endfor %}
-                                  {% endif %}
-                                  <div onclick="buttonFormClicked()">{{ form.anim(class="smallFieldSize") }}</div>
-                              </td>
-                              <td>
-                                  <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Animation" data-content="
+                                    {% endif %}
+                                    <div onclick="buttonFormClicked()">{{ form.noDates(class="smallFieldSize") }}</div>
+                                </td>
+                                <td>
+                                    <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="All times" data-content="
+                                        Whether to generate a fixed map for all localized entries in the dataset (even those without datations).">
+                                        <i class="fa fa-question-circle-o" aria-hidden="true"></i>
+                                    </a>
+                                </td>
+
+                            </tr>
+                            <tr id='anim'>
+                                <td>
+                                    {{ form.anim.label }}
+                                </td>
+                                <td>
+                                    {% if form.anim.errors %}
+                                    {% for message in form.anim.errors %}
+                                    <div style="color:red">{{ message }}</div>
+                                    {% endfor %}
+                                    {% endif %}
+                                    <div onclick="buttonFormClicked()">{{ form.anim(class="smallFieldSize") }}</div>
+                                </td>
+                                <td>
+                                    <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Animation" data-content="
                                   WARNING: video generation can be very slow! - Whether you want to generate a .mp4
                                   video plotting the data over a time period or the averaged plots over this a period.">
-                                       <i class="fa fa-question-circle-o" aria-hidden="true"></i>
-                                  </a>
-                              </td>
+                                        <i class="fa fa-question-circle-o" aria-hidden="true"></i>
+                                    </a>
+                                </td>
 
                             </tr>
                             <tr id='lAge'>
@@ -894,17 +930,17 @@ on the map. A cluster is defined such as none of its points is distant to all th
                               </td>
                             </tr>
 
-                            <tr id='fixedVmax'>
+                            <tr id='fixedvmax'>
                               <td>
-                                  {{ form.fixedVmax.label }}
+                                  {{ form.fixedvmax.label }}
                               </td>
                               <td>
-                                  {% if form.fixedVmax.errors %}
-                                    {% for message in form.fixedVmax.errors %}
+                                  {% if form.fixedvmax.errors %}
+                                    {% for message in form.fixedvmax.errors %}
                                       <div style="color:red">{{ message }}</div>
                                     {% endfor %}
                                   {% endif %}
-                                  <div onclick="buttonFormClicked()">{{ form.fixedVmax(class="normalFieldSize") }}</div>
+                                  <div onclick="buttonFormClicked()">{{ form.fixedvmax(class="normalFieldSize") }}</div>
                               </td>
                               <td>
                                   <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Fixed maximum colorscale value" data-content="Whether to set a maximum value of the color scale in density and histogram plots.
@@ -979,14 +1015,21 @@ on the map. A cluster is defined such as none of its points is distant to all th
                 <i class="fa fa-4x far fa-list-alt pl-5 pb-5 pr-5 pt-2"></i>
             </header>
             <div class="row">
-                <div class="col-12 col-sm-4" id="divHistNames">
-                    {{ figHistWords|safe }}
+                <div class="col" id="divHistNames">
                     <div style="text-align:center">
+                        {{ figHistWords|safe }}
                         <a href="{{ url_for('static', filename=folderShort+'histNames.jpg') }}" download>
-                        <i class="fa fa-1x fas fa-download" style="color: black;"></i></a>
+                            <i class="fa fa-1x fas fa-download" style="color: black;"></i></a>
                     </div>
                 </div>
-                <div class="col col-sm-8" id="divMetrics">
+                <div class="col" id="divHistStat">
+                    <div style="text-align:center">
+                        {{ figHistStat|safe }}
+                        <a href="{{ url_for('static', filename=folderShort+'histStat.jpg') }}" download>
+                            <i class="fa fa-1x fas fa-download" style="color: black;"></i></a>
+                    </div>
+                </div>
+                <div class="col" id="divMetrics">
                     <div style="width=100%">
                         {{ figMetrics|safe }}
                     </div>
