--- a/Website/templates/niceTemplate.html
+++ b/Website/templates/niceTemplate.html
@@ -125,6 +125,7 @@
             $("#lAge").hide();
             $("#fps").hide();
             $("#weighted").hide();
+            $("#imageOnly").show();
         }
         else{
             $("#anim").show();
