Split DS noDates

--- a/Website/templates/niceTemplate.html
+++ b/Website/templates/niceTemplate.html
@@ -543,6 +543,7 @@
                               </td>
                             </tr>
 
+                            <!--
                             <tr id='datasetApprox'>
                               <td>
                                   {{ form.datasetApprox.label }}
@@ -562,6 +563,7 @@
                                   </a>
                               </td>
                             </tr>
+                            -->
 
                             <tr id='exclureRome'>
                               <td>
@@ -622,8 +624,8 @@
                                 </td>
                                 <td>
                                     <a tabindex="0" style="color:black" class="d-inline-block" data-toggle="popover" data-trigger="hover" title="Animation" data-content="
-                                  WARNING: video generation can be very slow! - Whether you want to generate a .mp4
-                                  video plotting the data over a time period or the averaged plots over this a period.">
+                                  WARNING: video generation can be very slow! - Whether to generate a .mp4
+                                  video plotting the data over a time period, or to generate the averaged (static) plot over this period.">
                                         <i class="fa fa-question-circle-o" aria-hidden="true"></i>
                                     </a>
                                 </td>
